# minimal-game-engine

./: .gitignore  CMakeLists.txt  Harden.cmake  engine.c  engine.h  event.c  graphics.c  graphics.h  init.c  ray.c  ray.h  shaders.h  term.c  term.h
include/: engine.h  geomath.h  graphics.h  physics.h  progman.h  scripts.h  shaders.h  shapes.h  systems.h  term.h
include/libfixmath/: LICENSE  fixarray.h  fixmatrix.h  fixquat.h  fixstring.h  fixvector2d.h  fixvector3d.h
include/programs/: program1.h
lib/libfixmath/: fixarray.c  fixmatrix.c  fixquat.c  fixstring.c  fixvector2d.c  fixvector3d.c
src/: 2d.c  behaviour.c  boidmode.c  engine.c  event.c  geometry.c  graphics.c  init.c  physics.c  scripts.c  selftest.c  shaders.c  shapes.c  skybox.c  term.c  testmode.c
src/assets/: font.inc.c
src/legacy/: term.c
src/programs/: boidmode.c  selftest.c  testmode.c
src/programs/program1/: boidmode.c  selftest.c  testmode.c
